// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Sections/View Section Address 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <ViewSection
    className="md:grid md:grid-cols-1 gap-y-4"
    insetGrid={true}
    tinted={true}
    title="Section Title"
  >
    <div
      className="view-section"
    >
      <header
        className="view-section__header"
      >
        <h2
          className="view-section__title"
        >
          Section Title
        </h2>
      </header>
      <div
        className="view-grid is-tinted is-inset md:grid md:grid-cols-1 gap-y-4"
      >
        <div
          className="view-group"
        >
          <h3
            className="view-group__title"
          >
            Residence Address
          </h3>
          <div
            className="view-subgrid md:grid md:grid-cols-4 md:gap-8"
          >
            <GridItem
              className="md:col-span-3"
            >
              <div
                className="grid-item md:col-span-3"
              >
                <ViewItem
                  label="Street Address"
                >
                  <p
                    className="view-item"
                  >
                    <span
                      className="view-item__label"
                    >
                      Street Address
                    </span>
                    <span
                      className="view-item__value"
                    >
                      112 Springfield St.
                    </span>
                  </p>
                </ViewItem>
              </div>
            </GridItem>
            <GridItem>
              <div
                className="grid-item"
              >
                <ViewItem
                  label="Apt Unit #"
                >
                  <p
                    className="view-item"
                  >
                    <span
                      className="view-item__label"
                    >
                      Apt Unit #
                    </span>
                    <span
                      className="view-item__value"
                    >
                      1
                    </span>
                  </p>
                </ViewItem>
              </div>
            </GridItem>
            <GridItem
              className="md:col-span-2"
            >
              <div
                className="grid-item md:col-span-2"
              >
                <ViewItem
                  label="City"
                >
                  <p
                    className="view-item"
                  >
                    <span
                      className="view-item__label"
                    >
                      City
                    </span>
                    <span
                      className="view-item__value"
                    >
                      Oakland
                    </span>
                  </p>
                </ViewItem>
              </div>
            </GridItem>
            <GridItem>
              <div
                className="grid-item"
              >
                <ViewItem
                  label="State"
                >
                  <p
                    className="view-item"
                  >
                    <span
                      className="view-item__label"
                    >
                      State
                    </span>
                    <span
                      className="view-item__value"
                    >
                      CA
                    </span>
                  </p>
                </ViewItem>
              </div>
            </GridItem>
            <GridItem>
              <div
                className="grid-item"
              >
                <ViewItem
                  label="Zip"
                >
                  <p
                    className="view-item"
                  >
                    <span
                      className="view-item__label"
                    >
                      Zip
                    </span>
                    <span
                      className="view-item__value"
                    >
                      94577
                    </span>
                  </p>
                </ViewItem>
              </div>
            </GridItem>
          </div>
        </div>
      </div>
    </div>
  </ViewSection>
</div>
`;

exports[`Storyshots Sections/View Section Four Columns 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <ViewSection
    grid={true}
    subtitle="Subsection Title"
    title="Section Title"
  >
    <div
      className="view-section"
    >
      <header
        className="view-section__header"
      >
        <h2
          className="view-section__title"
        >
          Section Title
        </h2>
        <h3
          className="view-section__subtitle"
        >
          Subsection Title
        </h3>
      </header>
      <div
        className="view-grid md:grid md:grid-cols-4 md:gap-8"
      >
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="First Name"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  First Name
                </span>
                <span
                  className="view-item__value"
                >
                  Lisa
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="Middle Name"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Middle Name
                </span>
                <span
                  className="view-item__value"
                >
                  S
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="Last Name"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Last Name
                </span>
                <span
                  className="view-item__value"
                >
                  Jones
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="Date of Birth"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Date of Birth
                </span>
                <span
                  className="view-item__value"
                >
                  01/01/1985
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="Email"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Email
                </span>
                <span
                  className="view-item__value"
                >
                  lisa@gmail.com
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              helper="Cell"
              label="Phone"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Phone
                </span>
                <span
                  className="view-item__value"
                >
                  111-222-3333
                </span>
                <span
                  className="view-item__helper"
                >
                  Cell
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              helper="Work"
              label="Second Phone"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Second Phone
                </span>
                <span
                  className="view-item__value"
                >
                  111-222-3333
                </span>
                <span
                  className="view-item__helper"
                >
                  Work
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="Perferred Contact"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Perferred Contact
                </span>
                <span
                  className="view-item__value"
                >
                  Phone
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
      </div>
    </div>
  </ViewSection>
</div>
`;

exports[`Storyshots Sections/View Section Four Columns Edit 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <ViewSection
    className="md:grid md:grid-cols-4 md:gap-8"
    edit="Edit"
    insetGrid={true}
    subtitle="Subsection Title"
    tinted={true}
    title="Very Long Section Title That Wraps on Mobile"
  >
    <div
      className="view-section"
    >
      <header
        className="view-section__header"
      >
        <h2
          className="view-section__title"
        >
          Very Long Section Title That Wraps on Mobile
        </h2>
        <span
          className="ml-auto"
        >
          <a
            className="edit-link"
          >
            Edit
          </a>
        </span>
        <h3
          className="view-section__subtitle"
        >
          Subsection Title
        </h3>
      </header>
      <div
        className="view-grid is-tinted is-inset md:grid md:grid-cols-4 md:gap-8"
      >
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="First Name"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  First Name
                </span>
                <span
                  className="view-item__value"
                >
                  Lisa
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="Middle Name"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Middle Name
                </span>
                <span
                  className="view-item__value"
                >
                  S
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="Last Name"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Last Name
                </span>
                <span
                  className="view-item__value"
                >
                  Jones
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="Date of Birth"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Date of Birth
                </span>
                <span
                  className="view-item__value"
                >
                  01/01/1985
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="Email"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Email
                </span>
                <span
                  className="view-item__value"
                >
                  lisa@gmail.com
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              helper="Cell"
              label="Phone"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Phone
                </span>
                <span
                  className="view-item__value"
                >
                  111-222-3333
                </span>
                <span
                  className="view-item__helper"
                >
                  Cell
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              helper="Work"
              label="Second Phone"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Second Phone
                </span>
                <span
                  className="view-item__value"
                >
                  111-222-3333
                </span>
                <span
                  className="view-item__helper"
                >
                  Work
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="Perferred Contact"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Perferred Contact
                </span>
                <span
                  className="view-item__value"
                >
                  Phone
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
      </div>
    </div>
  </ViewSection>
</div>
`;

exports[`Storyshots Sections/View Section Two Columns 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <ViewSection
    grid={true}
    gridColumns={2}
    title="Section Title"
  >
    <div
      className="view-section"
    >
      <header
        className="view-section__header"
      >
        <h2
          className="view-section__title"
        >
          Section Title
        </h2>
      </header>
      <div
        className="view-grid md:grid md:grid-cols-2 md:gap-8"
      >
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="First Name"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  First Name
                </span>
                <span
                  className="view-item__value"
                >
                  Lisa
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="Middle Name"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Middle Name
                </span>
                <span
                  className="view-item__value"
                >
                  S
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="Last Name"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Last Name
                </span>
                <span
                  className="view-item__value"
                >
                  Jones
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
        <GridItem>
          <div
            className="grid-item"
          >
            <ViewItem
              label="Date of Birth"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Date of Birth
                </span>
                <span
                  className="view-item__value"
                >
                  01/01/1985
                </span>
              </p>
            </ViewItem>
          </div>
        </GridItem>
      </div>
    </div>
  </ViewSection>
</div>
`;

exports[`Storyshots Sections/View Section View Section Single Column 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <ViewSection
    insetGrid={true}
    tinted={true}
  >
    <div
      className="view-section"
    >
      <div
        className="view-grid is-tinted is-inset"
      >
        <div
          className="view-group"
        >
          <h3
            className="view-group__title"
          >
            My Group
          </h3>
          <div
            className="view-subgrid md:grid md:grid-cols-1 gap-y-4 bg-primary-lighter"
          >
            <ViewItem
              label="First Name"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  First Name
                </span>
                <span
                  className="view-item__value"
                >
                  Lisa
                </span>
              </p>
            </ViewItem>
            <ViewItem
              label="Middle Name"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Middle Name
                </span>
                <span
                  className="view-item__value"
                >
                  S
                </span>
              </p>
            </ViewItem>
            <ViewItem
              label="Last Name"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Last Name
                </span>
                <span
                  className="view-item__value"
                >
                  Jones
                </span>
              </p>
            </ViewItem>
            <ViewItem
              label="Date of Birth"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Date of Birth
                </span>
                <span
                  className="view-item__value"
                >
                  01/01/1985
                </span>
              </p>
            </ViewItem>
            <ViewItem
              label="Email"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Email
                </span>
                <span
                  className="view-item__value"
                >
                  lisa@gmail.com
                </span>
              </p>
            </ViewItem>
            <ViewItem
              helper="Cell"
              label="Phone"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Phone
                </span>
                <span
                  className="view-item__value"
                >
                  111-222-3333
                </span>
                <span
                  className="view-item__helper"
                >
                  Cell
                </span>
              </p>
            </ViewItem>
            <ViewItem
              helper="Work"
              label="Second Phone"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Second Phone
                </span>
                <span
                  className="view-item__value"
                >
                  111-222-3333
                </span>
                <span
                  className="view-item__helper"
                >
                  Work
                </span>
              </p>
            </ViewItem>
            <ViewItem
              label="Perferred Contact"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Perferred Contact
                </span>
                <span
                  className="view-item__value"
                >
                  Phone
                </span>
              </p>
            </ViewItem>
          </div>
        </div>
      </div>
    </div>
  </ViewSection>
</div>
`;

exports[`Storyshots Sections/View Section View Section Single Column Warn 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <ViewSection>
    <div
      className="view-section"
    >
      <div
        className="view-grid"
      >
        <ViewItem
          label="Application Number"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Application Number
            </span>
            <span
              className="view-item__value"
            >
              APP-0001002002
            </span>
          </p>
        </ViewItem>
        <div
          className="view-group bg-primary-lighter my-4 p-4"
        >
          <fieldset>
            <legend
              className="field-note mb-4 text-gray-750"
            >
              Confirm this application is valid:
            </legend>
            <div
              className="field-group--inline"
            >
              <div
                className="field "
              >
                <input
                  id="testvalidappkeep"
                  name="testvalidapp"
                  type="radio"
                  value="keep"
                />
                <label
                  className="font-semibold"
                  htmlFor="testvalidappkeep"
                >
                  Keep
                </label>
              </div>
              <div
                className="field "
              >
                <input
                  id="testvalidappremove"
                  name="testvalidapp"
                  type="radio"
                  value="remove"
                />
                <label
                  className="font-semibold"
                  htmlFor="testvalidappremove"
                >
                  Remove
                </label>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="view-group"
        >
          <h3
            className="view-group__title"
          >
            My Group
          </h3>
          <div
            className="view-subgrid p-8 md:grid md:grid-cols-1 gap-y-4 bg-primary-lighter"
          >
            <ViewItem
              flagged={true}
              label="First Name"
            >
              <p
                className="view-item is-flagged"
              >
                <span
                  className="view-item__label"
                >
                  First Name
                </span>
                <span
                  className="view-item__value"
                >
                  Lisa
                </span>
              </p>
            </ViewItem>
            <ViewItem
              flagged={true}
              label="Middle Name"
            >
              <p
                className="view-item is-flagged"
              >
                <span
                  className="view-item__label"
                >
                  Middle Name
                </span>
                <span
                  className="view-item__value"
                >
                  S
                </span>
              </p>
            </ViewItem>
            <ViewItem
              flagged={true}
              label="Last Name"
            >
              <p
                className="view-item is-flagged"
              >
                <span
                  className="view-item__label"
                >
                  Last Name
                </span>
                <span
                  className="view-item__value"
                >
                  Jones
                </span>
              </p>
            </ViewItem>
            <ViewItem
              flagged={true}
              label="Date of Birth"
            >
              <p
                className="view-item is-flagged"
              >
                <span
                  className="view-item__label"
                >
                  Date of Birth
                </span>
                <span
                  className="view-item__value"
                >
                  01/01/1985
                </span>
              </p>
            </ViewItem>
            <ViewItem
              label="Email"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Email
                </span>
                <span
                  className="view-item__value"
                >
                  lisa@gmail.com
                </span>
              </p>
            </ViewItem>
            <ViewItem
              helper="Cell"
              label="Phone"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Phone
                </span>
                <span
                  className="view-item__value"
                >
                  111-222-3333
                </span>
                <span
                  className="view-item__helper"
                >
                  Cell
                </span>
              </p>
            </ViewItem>
            <ViewItem
              helper="Work"
              label="Second Phone"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Second Phone
                </span>
                <span
                  className="view-item__value"
                >
                  111-222-3333
                </span>
                <span
                  className="view-item__helper"
                >
                  Work
                </span>
              </p>
            </ViewItem>
            <ViewItem
              label="Perferred Contact"
            >
              <p
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Perferred Contact
                </span>
                <span
                  className="view-item__value"
                >
                  Phone
                </span>
              </p>
            </ViewItem>
          </div>
        </div>
      </div>
    </div>
  </ViewSection>
</div>
`;

exports[`Storyshots Sections/View Section View Section Table 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <ViewSection
    insetGrid={true}
    tinted={true}
    title="Section Title"
  >
    <div
      className="view-section"
    >
      <header
        className="view-section__header"
      >
        <h2
          className="view-section__title"
        >
          Section Title
        </h2>
      </header>
      <div
        className="view-grid is-tinted is-inset"
      >
        <SimpleTable>
          <table
            className="td-plain th-plain text-sm w-full"
          >
            <thead>
              <tr>
                <th>
                  Name
                </th>
                <th>
                  Relationship
                </th>
                <th>
                  DOB
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="px-5 py-3"
                >
                  Jim Halpert
                </td>
                <td
                  className="px-5 py-3"
                >
                  Husband
                </td>
                <td
                  className="px-5 py-3"
                >
                  05/01/1985
                </td>
              </tr>
              <tr>
                <td
                  className="px-5 py-3"
                >
                  Michael Scott
                </td>
                <td
                  className="px-5 py-3"
                >
                  Friend
                </td>
                <td
                  className="px-5 py-3"
                >
                  05/01/1975
                </td>
              </tr>
            </tbody>
          </table>
        </SimpleTable>
      </div>
    </div>
  </ViewSection>
</div>
`;
